--- a/ATWeb.html
+++ b/ATWeb.html
@@ -17,6 +17,6 @@
 <H1 style="font-size: 75px;">The Appalacian Trail</H1>
 <br>
 <paragraph style="font-size: 21px;">The Appalacian Trail is a national trail that is about 2,193 miles long. It starts in Georgia and makes its way up to Maine.
-    <br> Many people decide to hike chunks of the appalachain trail, but some thru-hike the whole 2,000 miles.  </paragraph>
+    Many people decide to hike chunks of the appalachain trail, but some thru-hike the whole 2,000 miles.  </paragraph>
 </body>
 </html>
