--- a/ATWeb.html
+++ b/ATWeb.html
@@ -16,7 +16,14 @@
     </aside>
 <H1 style="font-size: 75px;">The Appalacian Trail</H1>
 <br>
-<paragraph style="font-size: 21px;">The Appalacian Trail is a national trail that is about 2,193 miles long. It starts in Georgia and makes its way up to Maine.
-    Many people decide to hike chunks of the appalachain trail, but some thru-hike the whole 2,000 miles.  </paragraph>
+<p>The Appalacian Trail is a national trail that is about 2,193 miles long. It starts in Georgia and makes its way up to Maine.
+    Many people decide to hike chunks of the appalachain trail, but some thru-hike the whole 2,000 miles.  </p>
+<hr>
+    <h2>Popular Hikers</h2>
+    <h4>Including: Earl Shaffer, Grandma GateWood</h4>
+<p></p>
+
+
+    
 </body>
 </html>
