--- a/ATWeb.html
+++ b/ATWeb.html
@@ -14,15 +14,18 @@
    
    
     </aside>
-<H1 style="font-size: 75px;">The Appalacian Trail</H1>
+<H1>The Appalacian Trail</H1>
 <br>
 <p>The Appalacian Trail is a national trail that is about 2,193 miles long. It starts in Georgia and makes its way up to Maine.
     Many people decide to hike chunks of the appalachain trail, but some thru-hike the whole 2,000 miles.  </p>
 <hr>
     <h2>Popular Hikers</h2>
     <h4>Including: Earl Shaffer, Grandma GateWood</h4>
-<p></p>
-
+<h3>Earl Shaffer</h3>
+<p> </p>
+<hr>
+  <h3>Grandma Gatewood</h3>
+<p>She was a 67 Year old Great-grand-mother who had 11 kids. She left with 200 dollars  and walked the whole trail in just her shoes and a bag. She finished the trail surviving a rattlesnake attack, two hurricanes, and a run in with Harlem Gangsters. When she finishd the trail she sang  'America, the Beautiful' and proclaimed, "I said i'd do it and, i've done it."</p>  
 
     
 </body>
