--- a/ATWeb.html
+++ b/ATWeb.html
@@ -11,7 +11,7 @@
     <aside>
         <img src="https://4.bp.blogspot.com/-t7AuObI2dY0/VcK4093k1CI/AAAAAAAACv0/Xf9iG9N84mI/s1600/circle-appalachian-trail-sticker.png" alt="">
        <br><H1 style="font-size: 50px;">Sources</H1>
-   
+   <h6>Step By Step Along the Appalachian Trail-By: Jricia Andryszewski</h6>
    
     </aside>
 <H1>The Appalacian Trail</H1>
