--- a/ATWeb.html
+++ b/ATWeb.html
@@ -15,6 +15,7 @@
    
     </aside>
 <H1>The Appalacian Trail</H1>
+    <h5>A Footpath For Those Who Seek Fellowship With the Wilderness</h5>
 <br>
 <p>The Appalacian Trail is a national trail that is about 2,193 miles long. It starts in Georgia and makes its way up to Maine.
     Many people decide to hike chunks of the appalachain trail, but some thru-hike the whole 2,000 miles.  </p>
