--- a/ATWeb.html
+++ b/ATWeb.html
@@ -36,8 +36,30 @@
     
 <hr>
   <h3>Grandma Gatewood:</h3>
-<p>She was a 67 Year old Great-grand-mother who had 11 kids. She left with 200 dollars  and walked the whole trail in just her shoes and a bag. She finished the trail surviving a rattlesnake attack, two hurricanes, and a run in with Harlem Gangsters. When she finishd the trail she sang  'America, the Beautiful' and proclaimed, "I said i'd do it and, i've done it."</p>  
+<p>She was a 67 Year old Great-grand-mother who had 11 kids. She left with 200 dollars  and walked the whole trail in just her shoes and a bag. She finished the trail surviving a rattlesnake attack, two hurricanes, and a run in with Harlem Gangsters. When she finishd the trail she sang  'America, the Beautiful' and proclaimed, "I said i'd do it and, i've done it."</p>
+
+<h2 style="text-decoration = underline">Animals On The Appalacian</h2>
+<p> The Appalaccian Trail has a high variation and assortment of animals icluding more common to some you might not even notice. Here is some of the animals the trail holds.</p>
+<ol>
+<li><h4>Mice</h4></li>
+<p> Mice are in all parts of the trail. There is a very low chance you wont see a mice if you ever hike the trail. They are commonly found in the trail shelters.</p>
+<li><h4>Rattlesnakes</h4></li>
+<p>Though rattlesnakes might seem dangerous they actually help prevent lime disease by preying on the Mice who contract lime disease to the Ticks. Rattlesnakes are also mainly found in 1 part of the trail</p>
+<li><h4>Ticks</h4></li>
+<p>Ticks are the most dangerous animal/insect on the trail. Even with there small size they carry lime disease which if not treated in humans can cause Paralization, or even death.</p>
+<li><h4>Horses</h4></li>
+<p>Horses are one of the rarest animals on the trail infact they should not be there. May people think they escaped and after decades now there are a small ggroup of wild horses on the trail</p>
+<li><h4>Bears</h4></li>
+<p>Bears are a common sight nywhere on the trail some sheltters offer a uley system to haul your food into a tree so the bears dont take it. Though there are many encounters there are very few reported deaths.</p>
+<li><h4>Elk</h4></li>
+<p>In the Smokey Mountian part of the trail you can encounter wild elk traveling in groups.</p>
+
+
+
+
+
 
     
+</ol>    
 </body>
 </html>
