--- a/ATWeb.html
+++ b/ATWeb.html
@@ -26,18 +26,20 @@
 <hr>
     <h2>Popular Hikers</h2>
     <h4>Including: Earl Shaffer, Grandma GateWood</h4>
-    <br>
-<h3>Earl Shaffer:</h3>
-<p> </p>
+<br>
+    <h3>Earl Shaffer:</h3>
+    <p></p>
 <br>
 <br>
-
-
-    
-<hr>
+    <h3>Dale Sanders</h3>
+    <p>Became oldest to hike trail at the age of 82.</p>
+<br>
+<br>
+    <h3>Neva Warren</h3>
+    <p>15 year old who hiked the whole trail alone.</p>
   <h3>Grandma Gatewood:</h3>
 <p>She was a 67 Year old Great-grand-mother who had 11 kids. She left with 200 dollars  and walked the whole trail in just her shoes and a bag. She finished the trail surviving a rattlesnake attack, two hurricanes, and a run in with Harlem Gangsters. When she finishd the trail she sang  'America, the Beautiful' and proclaimed, "I said i'd do it and, i've done it."</p>
-
+<hr>
 <h2 style="text-decoration = underline">Animals On The Appalacian</h2>
 <p> The Appalaccian Trail has a high variation and assortment of animals icluding more common to some you might not even notice. Here is some of the animals the trail holds.</p>
 <ol>
