--- a/ATWeb.html
+++ b/ATWeb.html
@@ -7,7 +7,7 @@
     <title>Appalacian_Trail</title>
     <link rel="stylesheet" href="ATWeb.css">
 </head>
-<body style="background-color: #3d2b1f;">
+<body style="background-color: #63381c;">
     
     <aside>
         <img src="https://4.bp.blogspot.com/-t7AuObI2dY0/VcK4093k1CI/AAAAAAAACv0/Xf9iG9N84mI/s1600/circle-appalachian-trail-sticker.png" alt="">
