--- a/ATWeb.html
+++ b/ATWeb.html
@@ -24,7 +24,7 @@
 <p>The Appalacian Trail is a national trail that is about 2,193 miles long. It starts in Georgia and makes its way up to Maine.
     Many people decide to hike chunks of the appalachain trail, but some thru-hike the whole 2,000 miles.  </p>
 <hr>
-    <h2>Popular Hikers</h2>
+    <h2>Thru Hikers</h2>
     <h4>Including: Earl Shaffer, Grandma GateWood</h4>
 <br>
     <h3>Earl Shaffer:</h3>
