--- a/ATWeb.html
+++ b/ATWeb.html
@@ -67,13 +67,43 @@
 
 
 <h2 style="text-decoration = underline">Trail Clubs</h2>
+    <br>
 <ol>
-<li>ATC Volunteer</li>
-<li>AMC Conneticut ---</li>
-<li>AMC Western Massachusetts ---</li>
-<li>Randolph Mountian Club</li>
-<li>AMC</li>
-<li>Maine -- ATC</li>
+<h4>New England</h4>
+    <li>ATC Volunteer</li>
+    <li>AMC Conneticut Chapter</li>
+    <li>AMC Western Massachusetts</li>
+    <li>Randolph Mountian Club</li>
+    <li>Dartmouth Outing Club</li>
+    <li>Green Mountian Club</li>
+    <li>Maine Appalachian Trail Club</li>
+<h4>Mid-Atlantic</h4>
+    <li>New York-New Jersey Trail Conference</li>
+    <li>Batona Hiking Club</li>
+    <li>AMC-Delaware Valley Chapter</li>
+    <li>Keystone Trails Association</li>
+    <li>Blue Mountian Eagle Climbing Club</li>
+    <li>Allentown Hiking Club</li>
+    <li>Susquehanna Appalachian Trail Club</li>
+    <li>York Hiking Club</li>
+    <li>Cumberland Valley Appalachian Trail Club</li>
+    <li>Mountian Club of Maryland</li>
+    <li>Potomac Appalachian Trail Club</li>
+<h4>Virginia</h4>
+    <li>Old Dominion Appalachian Trail Club</li>
+    <li>Tidewater Appalachian Trail Club</li>
+    <li>Natural Bridge Appalachian Trail Club</li>
+    <li>Outdoor Club at Virginia Tech</li>
+    <li>Roanoke Appalachian Trail Club</li>
+    <li>Piedmont Appalachian Trail Hikers</li>
+    <li>Mount Rogers Appalachian Trail Club</li>
+<h4>South</h4>
+    <li>Tennessee Eastman Hiking and Canoeing Club</li>
+    <li>Carolina Mountain Club</li>
+    <li>Smoky Mountains Hiking Club</li>
+    <li>Nantahala Hiking Club</li>
+    <li>Georgia Appalachian Trail Club</li>
+
 
     
 </ol>
