--- a/ATWeb.html
+++ b/ATWeb.html
@@ -25,7 +25,7 @@
     Many people decide to hike chunks of the appalachain trail, but some thru-hike the whole 2,000 miles.  </p>
 <hr>
     <h2>Thru Hikers</h2>
-    <h4>Including: Earl Shaffer, Grandma GateWood</h4>
+    <h4>Including: Earl Shaffer, Grandma GateWood, Dale Sanders, Neva Warren</h4>
 <br>
     <h3>Earl Shaffer:</h3>
     <p></p>
