--- a/ATWeb.html
+++ b/ATWeb.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Appalacian_Trail</title>
+    <title>Appalachian_Trail</title>
     <link rel="stylesheet" href="ATWeb.css">
 </head>
 <body style="background-color: #63381c;">
@@ -18,10 +18,10 @@
         <br>
 <h6>nps.gov</h6>
     </aside>
-<H1>The Appalacian Trail</H1>
+<H1>The Appalachian Trail</H1>
     <h5>A Footpath For Those Who Seek Fellowship With the Wilderness</h5>
 <br>
-<p>The Appalacian Trail is a national trail that is about 2,193 miles long. It starts in Georgia and makes its way up to Maine.
+<p>The Appalachian Trail is a national trail that is about 2,193 miles long. It starts in Georgia and makes its way up to Maine.
     Many people decide to hike chunks of the appalachain trail, but some thru-hike the whole 2,000 miles.  </p>
 <hr>
     <h2>Thru Hikers</h2>
@@ -39,8 +39,8 @@
   <h3>Grandma Gatewood:</h3>
 <p>She was a 67 Year old Great-grand-mother who had 11 kids. She left with 200 dollars  and walked the whole trail in just her shoes and a bag. She finished the trail surviving a rattlesnake attack, two hurricanes, and a run in with Harlem Gangsters. When she finishd the trail she sang  'America, the Beautiful' and proclaimed, "I said i'd do it and, i've done it."</p>
 <hr>
-<h2 style="text-decoration = underline">Animals On The Appalacian</h2>
-<p> The Appalaccian Trail has a high variation and assortment of animals icluding more common to some you might not even notice. Here is some of the animals the trail holds.</p>
+<h2 style="text-decoration = underline">Animals On The Appalachian</h2>
+<p> The Appalachian Trail has a high variation and assortment of animals icluding more common to some you might not even notice. Here is some of the animals the trail holds.</p>
 <ol>
 <li><h4>Mice</h4></li>
 <p> Mice are in all parts of the trail. There is a very low chance you wont see a mice if you ever hike the trail. They are commonly found in the trail shelters.</p>
