--- a/ATWeb.html
+++ b/ATWeb.html
@@ -12,11 +12,11 @@
     <aside>
         <img src="https://4.bp.blogspot.com/-t7AuObI2dY0/VcK4093k1CI/AAAAAAAACv0/Xf9iG9N84mI/s1600/circle-appalachian-trail-sticker.png" alt="">
        <br><H1 style="font-size: 50px;">Sources</H1>
-   <h6>Step By Step Along the Appalachian Trail-By: Jricia Andryszewski</h6>
+   <h6>1. Step By Step Along the Appalachian Trail-By: Jricia Andryszewski</h6>
         <br>
-   <h6>appalachiantrail.org</h6>
+   <h6>2. appalachiantrail.org</h6>
         <br>
-<h6>nps.gov</h6>
+<h6>3. nps.gov</h6>
     </aside>
 <H1>The Appalachian Trail</H1>
     <h5>A Footpath For Those Who Seek Fellowship With the Wilderness</h5>
@@ -27,8 +27,8 @@
     <h2>Thru Hikers</h2>
     <h4>Including: Earl Shaffer, Grandma GateWood, Dale Sanders, Neva Warren</h4>
 <br>
-    <h3>Earl Shaffer:</h3>
-    <p></p>
+    <h3>Earl Shaffer</h3>
+    <p>Earl Shaffer or nickname, 'The Original Crazy One', he attempted the first publicized hike over the whole Appalachian Trail. He also was the first to hike the trail from Georgia to Maine but also from Maine to Georgia.</p>
 <br>
     <h3>Dale Sanders</h3>
     <p>Became oldest to hike trail at the age of 82.</p>
