--- a/ATWeb.html
+++ b/ATWeb.html
@@ -89,7 +89,7 @@
     <li>Susquehanna Appalachian Trail Club</li>
     <li>York Hiking Club</li>
     <li>Cumberland Valley Appalachian Trail Club</li>
-    <li>Mountian Club of Maryland</li>
+    <li>Mountian Club of Maryland</li><img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGOFzYr-HUNZ3-7puAOJQQQtuYh-4MNK-TCt04jlIM_Q&s" alt="image of marland club logo">
     <li>Potomac Appalachian Trail Club</li>
 <h4>Virginia</h4>
     <li>Old Dominion Appalachian Trail Club</li>
