--- a/ATWeb.html
+++ b/ATWeb.html
@@ -102,7 +102,7 @@
 <h4>South</h4>
     <li>Tennessee Eastman Hiking and Canoeing Club</li>
     <li>Carolina Mountain Club</li>
-    <li>Smoky Mountains Hiking Club</li><img src="https://smhclub.org/resources/58053807/18650_%20Smoky%20Mountains%20Hiking%20Club%20100%20Logo%20Decal.jpg" alt="logo of Smoky Mountains Hiking Club">
+    <li>Smoky Mountains Hiking Club</li><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSPR2Ex5DTbpF-anE3SP1BsE5_Fv6ihuOchUlvM_b6UaQ&s" alt="logo of Smoky Mountains Hiking Club">
     <li>Nantahala Hiking Club</li>
     <li>Georgia Appalachian Trail Club</li>
 
